# flask-htmx-poc

./: .gitignore  README.md  hello.py  pyproject.toml
templates/: index.html
