[tool.poetry]
name = "poc-htmx-flask"
version = "0.1.0"
description = ""
authors = ["FacuD <facundodocampo1@gmail.com>"]
readme = "README.md"
packages = [{include = "poc_htmx_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
